<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistass.InicioFragment">


    <!-- Contenedor principal que organiza los elementos de forma vertical -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@drawable/img1">

        <!-- Espacio inicial más amplio -->
        <View
            android:layout_width="match_parent"
            android:layout_height="150dp" />


        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuestra_aplicacion"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />


        <!-- Descripción del propósito de la aplicación -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuestra_aplicacion_ayudara_a_que_tengas_un_horario_mas_saludable_y_sana"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ademas_tenemos_funcionalidad_eficientes_para_la_facilidad_del_usuario"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:padding="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuracion_para_recordatorio_y_sus_rutinas"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recibe_notificaciones_para_recordar_el_consumo_diario_de_agua"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuracion_especial_para_tus_necesidades"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:padding="8dp" />


        <!-- Botón para cerrar sesión -->
        <Button
            android:id="@+id/btn_cerrar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrar_sesionn"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white" />
    </LinearLayout>

</FrameLayout>
