<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity"
    android:background="@drawable/img1">


    <!-- Título -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar_usuario"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Campo de entrada para el correo electrónico -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_email"
        android:hint="@string/correo_electronicoo"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <!-- Campo de entrada real donde el usuario ingresa su correo electrónico -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Campo de entrada para la contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_pass"
        android:hint="@string/contrase_aa"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">


        <!-- Campo de entrada real donde el usuario ingresa su contraseña -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Campo de entrada para confirmar la contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:hint="@string/confirmar_contrase_a"
        android:layout_marginTop="20dp"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:startIconDrawable="@drawable/ic_pass">


        <!-- Campo de entrada real donde el usuario confirma su contraseña -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Botón para registrar al usuario -->
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/registrar_usuarioo"
        android:id="@+id/btnRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword2"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>